Dark mode fixed
Nav dark mode fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -569,3 +569,7 @@ body {
   animation-delay: 2s;
   animation-timing-function: cubic-bezier(0.3,0.8,1,1);
 }
+
+.gearBg {
+  opacity: 0;
+}
